--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 /bazel-out
 
 # Node
-/node_modules
+/frontend/node_modules
+/backend/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -36,7 +37,12 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+/angular
+
+/frontend/.angular
 
 # System files
 .DS_Store
 Thumbs.db
+
+.env
