--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/storage": "^7.17.1",
     "accepts": "^2.0.0",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
@@ -25,6 +26,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.7.2",
     "cookie-signature": "^1.2.2",
+    "cors": "^2.8.5",
     "create-require": "^1.1.1",
     "debug": "^4.4.3",
     "denque": "^2.1.0",
@@ -69,6 +71,7 @@
     "is-number": "^7.0.0",
     "is-promise": "^4.0.0",
     "is-property": "^1.0.2",
+    "jsonwebtoken": "^9.0.2",
     "long": "^5.3.2",
     "lru-cache": "^7.18.3",
     "lru.min": "^1.1.2",
@@ -140,7 +143,10 @@
     "yn": "^3.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/google-cloud__storage": "^1.7.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
