--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,6 +19,10 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "baseUrl": "./",
+    "paths": {
+      "@shared/*": ["../../shared/*"]
+    },
     "lib": [
       "ES2022",
       "dom"
